--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -440,4 +440,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">共有 → 書式</string>
     <string name="auto_format">自動フォーマット</string>
     <string name="insert_snippet">Insert snippet</string>
+    <string name="document_error_exit">エラー：開けませんでした。</string>
+    <string name="document_error_clip">エラーが発生しました: テキストをクリップボードにコピーしました。</string>
 </resources>
