--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -440,4 +440,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Deel mee - Formaat</string>
     <string name="auto_format">Auto-formaat</string>
     <string name="insert_snippet">Insert snippet</string>
+    <string name="document_error_exit">Fout: Kan niet openen.</string>
+    <string name="document_error_clip">Fout opgetreden: tekst gekopieerd naar klembord.</string>
 </resources>
