--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -440,4 +440,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Del inn - format</string>
     <string name="auto_format">Autokoformater</string>
     <string name="insert_snippet">Insert snippet</string>
+    <string name="document_error_exit">Feil: kunne ikke åpne.</string>
+    <string name="document_error_clip">Oppnådd tekst: kopiert til utklippstavlen.</string>
 </resources>
