--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -204,8 +204,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">По верхнему краю</string>
     <string name="bottom">Снизу</string>
     <string name="center">Центр</string>
-
-
     <string name="center_text">Центрировать текст</string>
     <string name="edit_text_in_center_of_screen">Начинать редактирование текста по центру</string>
     <string name="clipboard">Буфер обмена</string>
@@ -247,8 +245,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="enter_yaml_front_matter_attributes_to_show">Отображать введенные атрибуты YAML Front Matter в верхней части просматриваемых документов. Введите имена атрибутов, разделенные запятыми. Если пусто - ничего не отобразится. Если \'*\' - будут отображены все. \n\nЕсли атрибут определен в документе (т.е. title: \'Hi\'), и в документе также есть {{ post.title }} то произойдёт замена. Так вы можете сделать свой заголовок Front Matter.</string>
     <string name="table_of_contents">Оглавление</string>
     <string name="miscellaneous">Прочее</string>
-
-
     <string name="prefer_view">Предпочитать просмотр</string>
     <string name="no_calendar_app_is_installed">Приложение календаря не установлено!</string>
     <string name="popular_documents">Частые документы</string>
@@ -440,4 +436,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">Поделиться - Формат</string>
     <string name="auto_format">Автоформат</string>
     <string name="insert_snippet">Insert snippet</string>
+    <string name="document_error_exit">Ошибка: не удалось открыть.</string>
+    <string name="document_error_clip">Произошла ошибка: текст скопирован в буфер обмена.</string>
 </resources>
